Add QueryDSL module with parser implementation and tests
Introduced a QueryDSL parser for parsing boolean and mathematical operations based on EBNF grammar. This includes the parser logic, test cases, and the necessary configuration, such as Maven setup, resources, and IntelliJ IDEA project files. Various utility updates and enhancements to support parsing functionality were also included.